[gd_scene load_steps=8 format=3 uid="uid://dxpvgjseo0pf6"]

[ext_resource type="Script" uid="uid://bhs0w61dcvwv3" path="res://asessts/scripts/opp.gd" id="1_03lol"]
[ext_resource type="Texture2D" uid="uid://c6sbkhhxppj57" path="res://asessts/sprites/sprite_sheet-OLD (1).png" id="1_tlwd1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_03lol"]
atlas = ExtResource("1_tlwd1")
region = Rect2(0, 800, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jwxko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03lol")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_03lol"]
radius = 39.0512

[sub_resource type="CircleShape2D" id="CircleShape2D_jwxko"]
radius = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03lol"]
size = Vector2(1149, 185)

[node name="opp" type="CharacterBody2D"]
collision_mask = 5
motion_mode = 1
script = ExtResource("1_03lol")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.25, 2.25)
sprite_frames = SubResource("SpriteFrames_jwxko")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_03lol")

[node name="ball_collided" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball_collided"]
shape = SubResource("CircleShape2D_jwxko")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="chase_detect" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="chase_detect"]
position = Vector2(0.5, 49.5)
shape = SubResource("RectangleShape2D_03lol")

[connection signal="body_entered" from="ball_collided" to="." method="_on_ball_collide_body_entered"]
[connection signal="body_entered" from="ball_collided" to="." method="_on_ball_collided_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="chase_detect" to="." method="_on_chase_detect_body_entered"]
[connection signal="body_exited" from="chase_detect" to="." method="_on_chase_detect_body_exited"]
